--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "CarePets",
   "version": "0.0.1",
   "private": true,
+  "description": "An Ionic project",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -10,16 +11,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@capacitor/android": "4.6.3",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.6.3",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "autoprefixer": "^10",
     "core-js": "^3.6.5",
     "firebase": "^9.17.2",
     "ionicons": "^6.0.3",
+    "postcss": "^8",
+    "tailwindcss": "^3",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12"
   },
@@ -44,7 +54,7 @@
     "eslint-plugin-vue": "^9.8.0",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
-    "typescript": "^4.3.5"
-  },
-  "description": "An Ionic project"
+    "typescript": "^4.3.5",
+    "vue-cli-plugin-tailwind": "~3.0.0"
+  }
 }
