--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "CarePets",
-  "version": "0.0.1",
   "private": true,
-  "description": "An Ionic project",
+  "version": "0.0.1",
+  "type": "module",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview",
+    "test:e2e": "cypress run",
+    "test:unit": "vitest",
+    "lint": "eslint"
   },
   "dependencies": {
-    "@capacitor/android": "4.6.3",
+    "@capacitor/android": "4.7.1",
     "@capacitor/app": "4.1.1",
-    "@capacitor/core": "4.6.3",
+    "@capacitor/core": "4.7.1",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
@@ -22,39 +23,29 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
-    "@ionic/vue": "^6.0.0",
-    "@ionic/vue-router": "^6.0.0",
-    "autoprefixer": "^10",
-    "core-js": "^3.6.5",
+    "@ionic/vue": "^7.0.0",
+    "@ionic/vue-router": "^7.0.0",
     "firebase": "^9.17.2",
     "ionicons": "^6.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "vue": "^3.2.21",
-    "vue-router": "^4.0.12"
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@capacitor/cli": "4.6.3",
-    "@types/jest": "^27.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
-    "@vue/cli-plugin-babel": "~5.0.0-rc.1",
-    "@vue/cli-plugin-e2e-cypress": "~5.0.0-rc.1",
-    "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
-    "@vue/cli-plugin-router": "~5.0.0-rc.1",
-    "@vue/cli-plugin-typescript": "~5.0.0-rc.1",
-    "@vue/cli-plugin-unit-jest": "~5.0.0-rc.1",
-    "@vue/cli-service": "~5.0.0-rc.1",
+    "@capacitor/cli": "4.7.1",
+    "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/test-utils": "^2.0.0-rc.16",
-    "@vue/vue3-jest": "^27.0.0-alpha.3",
-    "babel-jest": "^27.3.1",
-    "cypress": "^8.7.0",
-    "eslint": "^8.4.1",
-    "eslint-plugin-vue": "^9.8.0",
-    "jest": "^27.3.1",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.3.5",
-    "vue-cli-plugin-tailwind": "~3.0.0"
-  }
+    "@vue/test-utils": "^2.3.0",
+    "autoprefixer": "^10.4.14",
+    "cypress": "^12.7.0",
+    "eslint": "^8.35.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "jsdom": "^21.1.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1",
+    "typescript": "^4.9.3",
+    "vite": "^4.1.0",
+    "vitest": "^0.29.2",
+    "vue-tsc": "^1.0.24"
+  },
+  "description": "An Ionic project"
 }
