--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
+    "@tanstack/vue-query": "^4.29.5",
     "firebase": "^9.17.2",
     "ionicons": "^6.0.3",
+    "pinia": "^2.0.35",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
