--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@capacitor/cli": "4.7.1",
+    "@capacitor/cli": "^4.8.0",
     "@types/luxon": "^3.3.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
